--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,6 +6,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
+        android:layout_marginStart="6dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
