--- a/app/src/main/res/layout/shop_item.xml
+++ b/app/src/main/res/layout/shop_item.xml
@@ -1,29 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="96dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardUseCompatPadding="true"
-    android:orientation="vertical">
+    android:orientation="horizontal"
+    app:cardUseCompatPadding="true">
 
-    <TextView
-        android:id="@+id/shop_name"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ALDI"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/shop_address"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Tulpenweg 1, 15834, Rangsdorf"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
+        <TextView
+            android:id="@+id/shop_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ALDI"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
 
-    <TextView
-        android:id="@+id/shop_rating"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Rating: 4,2★"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
+        <TextView
+            android:id="@+id/shop_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Tulpenweg 1, 15834, Rangsdorf"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
+
+        <TextView
+            android:id="@+id/shop_rating"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Rating: 4,2★"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
+
+        <TextView
+            android:id="@+id/shop_distance"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Distance - 2km"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_gravity="end"
+        android:src="@drawable/ic_launcher_background"/>
+
+
 </LinearLayout>
+
+
+
+
