--- a/app/src/main/res/layout/university_item.xml
+++ b/app/src/main/res/layout/university_item.xml
@@ -19,10 +19,10 @@
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
 
         <TextView
-            android:id="@+id/university_domen"
+            android:id="@+id/university_domains"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Tulpenweg 1, 15834, Rangsdorf"
+            android:text=""
             android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
 
     </LinearLayout>
