Add title and color title in UAI

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,7 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <TextView
+        android:id="@+id/Ukranian_University"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:text="Ukranian University"
+        android:layout_gravity="center"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+        android:textSize="30dp"
+        android:textColor="#FFA500"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
